gateway-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-api
  template:
    metadata:
      labels:
        app: gateway-api
    spec:
      containers:
      - name: gateway-api
        image: ds-itm-gateway-api:v4
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-api-service
spec:
  selector:
    app: gateway-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
