inventory-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-api
  template:
    metadata:
      labels:
        app: inventory-api
    spec:
      containers:
        - name: inventory-api
          image: ds-itm-inventory-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-api-service
spec:
  selector:
    app: inventory-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
