notification-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-api
  template:
    metadata:
      labels:
        app: notification-api
    spec:
      containers:
        - name: notification-api
          image: ds-itm-notification-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources: 
            requests:
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
