order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
