price-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing-api
  template:
    metadata:
      labels:
        app: pricing-api
    spec:
      containers:
      - name: pricing-api
        image: ds-itm-price-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources: 
          requests:
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: pricing-service
spec:
  selector:
    app: pricing-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
