product-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: ds-itm-product-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: product-api-service
spec:
  selector:
    app: product-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
